--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAmzrcK4f9GXAJ03jxB8XdjP_IIBglxz5k" />
+            android:value="chave" />
 
         <activity
             android:name=".Main2Activity"
